--- a/Model/Login.html
+++ b/Model/Login.html
@@ -33,7 +33,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="navbar.js"></script>
+    <!-- <script src="navbar.js"></script> -->
 </body>
 </html>
 
