--- a/Model/navbar.html
+++ b/Model/navbar.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GlobeTogether</title>
     <link rel="stylesheet" href="navbar.css">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+
 </head>
 
 <body>
@@ -14,65 +16,26 @@
         <!-- Navbar -->
         <nav class="navbar">
             <div class="logo">GlobeTogether</div>
-            <div class="menu">"profile-icon" id="profileIcon" onclick="redirectToLogin()">
+            <div class="menu">
+                <div id="container">
                     <a href="#" aria-label="Profie" id="profileBtn">
-
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                            viewBox="0 0 64 64" id="profile" width="30" height="30">
-                            <defs>
-                                <linearGradient id="a" x1="32" x2="32" y1="64.044" y2="-.044"
-                                    gradientUnits="userSpaceOnUse">
-                                    <stop offset="0" stop-color="#fd5900"></stop>
-                                    <stop offset="1" stop-color="#fedc00"></stop>
-                                </linearGradient>
-                                <linearGradient xlink:href="#a" id="b" x1="12.92" x2="12.92" y1="64.044" y2="-.044">
-                                </linearGradient>
-                                <linearGradient xlink:href="#a" id="c" x1="48.25" x2="48.25" y1="64.044" y2="-.044">
-                                </linearGradient>
-                            </defs>
-                            <path fill="url(#a)"
-                                d="M41,25V23a9,9,0,0,0-18,0v2a9,9,0,0,0,18,0ZM25,25V23a7,7,0,0,1,14,0v2a7,7,0,0,1-14,0Z">
-                            </path>
-                            <path fill="url(#a)"
-                                d="M16.312,43.057a1,1,0,1,0,1.5,1.326,18.978,18.978,0,0,1,27.625-.815c.257.257.514.533.761.809a1,1,0,0,0,1.49-1.334c-.272-.3-.556-.608-.838-.89a20.977,20.977,0,0,0-30.535.9Z">
-                            </path>
-                            <path fill="url(#a)"
-                                d="M32,4A27.847,27.847,0,0,0,16.164,8.906,1,1,0,0,0,17.3,10.555,25.993,25.993,0,1,1,10.554,17.3a1,1,0,1,0-1.648-1.133A28,28,0,1,0,32,4Z">
-                            </path>
-                            <path fill="url(#b)"
-                                d="M13.157,14.1c.3-.328.61-.638.938-.939a1,1,0,1,0-1.35-1.474c-.372.339-.722.69-1.062,1.061A1,1,0,0,0,13.157,14.1Z">
-                            </path>
-                            <path fill="url(#c)"
-                                d="M47.75,49.75a1,1,0,0,0,.7-.282c.346-.337.683-.674,1.02-1.022a1,1,0,1,0-1.434-1.392c-.324.332-.647.655-.98.978a1,1,0,0,0,.7,1.718Z">
-                            </path>
-                            <path fill="url(#a)"
-                                d="M50.841,45.223a1,1,0,0,0,1.381-.3,24,24,0,1,0-7.3,7.3,1,1,0,0,0-1.078-1.686,22,22,0,1,1,6.7-6.7A1,1,0,0,0,50.841,45.223Z">
-                            </path>
-                        </svg></a>
-                    
+                        <i class="fa-solid fa-user"></i>
+                    </a>
                 </div>
-                <a href="#" aria-label="Notifications">
-                    <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" id="bell" x="0" y="0" version="1.1"
-                        viewBox="0 0 512 512" width="30" height="30">
-                        <path
-                            d="M381.7 225.9c0-97.6-52.5-130.8-101.6-138.2 0-.5.1-1 .1-1.6 0-12.3-10.9-22.1-24.2-22.1-13.3 0-23.8 9.8-23.8 22.1 0 .6 0 1.1.1 1.6-49.2 7.5-102 40.8-102 138.4 0 113.8-28.3 126-66.3 158h384c-37.8-32.1-66.3-44.4-66.3-158.2zM107.2 368c8.6-9 16.4-18.4 22.7-31.8 12-25.3 17.4-59.2 17.4-110.2 0-46.4 12.5-80.4 37.1-101.2 22.9-19.3 51.7-23.3 71.8-23.3 20.1 0 48.9 4 71.6 23.3 24.5 20.7 37 54.5 37 100.9 0 83.8 14.9 117.3 40.3 142.3H107.2zM256.2 448c26.8 0 48.8-19.9 51.7-43H204.5c2.8 23.1 24.9 43 51.7 43z"
-                            fill="#fffefe" class="color000000 svgShape"></path>
-                    </svg></a>
-                <a href="#" aria-label="Groups">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1792 1792" id="Group" width="30" height="30">
-                        <path
-                            d="M553.467 896q-151.2 4.667-247.334 119.467H181.067q-76.534 0-128.8-37.8Q0 939.867 0 867.067 0 537.6 115.733 537.6q5.6 0 40.6 19.6t91 39.667q56 20.066 111.067 20.066 62.533 0 124.133-21.466-4.666 34.533-4.666 61.6 0 129.733 75.6 238.933zm999.6 594.533q0 112-68.134 176.867-68.133 64.867-181.066 64.867H488.133q-112.933 0-181.066-64.867-68.134-64.867-68.134-176.867 0-49.466 3.267-96.6 3.267-47.133 13.067-101.733T280 1190.933q14.933-46.666 40.133-91 25.2-44.333 57.867-75.6 32.667-31.266 79.8-49.933 47.133-18.667 104.067-18.667 9.333 0 40.133 20.067 30.8 20.067 68.133 44.8 37.334 24.733 99.867 44.8 62.533 20.067 126 20.067t126-20.067q62.533-20.067 99.867-44.8 37.333-24.733 68.133-44.8 30.8-20.067 40.133-20.067 56.934 0 104.067 18.667 47.133 18.667 79.8 49.933 32.667 31.267 57.867 75.6 25.2 44.334 40.133 91 14.933 46.667 24.733 101.267 9.8 54.6 13.067 101.733 3.267 47.134 3.267 96.6zM597.333 298.667q0 98.933-70 168.933-70 70-168.933 70-98.933 0-168.933-70-70-70-70-168.933 0-98.934 70-168.934t168.933-70q98.933 0 168.933 70 70 70 70 168.934zm657.067 358.4q0 148.4-105 253.4t-253.4 105q-148.4 0-253.4-105t-105-253.4q0-148.4 105-253.4t253.4-105q148.4 0 253.4 105t105 253.4zm537.6 210q0 72.8-52.267 110.6-52.266 37.8-128.8 37.8h-125.066q-96.134-114.8-247.334-119.467 75.6-109.2 75.6-238.933 0-27.067-4.666-61.6 61.6 21.466 124.133 21.466 55.067 0 111.067-20.066 56-20.067 91-39.667t40.6-19.6Q1792 537.6 1792 867.067Zm-119.467-568.4q0 98.933-70 168.933-70 70-168.933 70-98.933 0-168.933-70-70-70-70-168.933 0-98.934 70-168.934t168.933-70q98.933 0 168.933 70 70 70 70 168.934z"
-                            fill="#fffefe" class="color000000 svgShape"></path>
-                    </svg></a>
+                <div id="container">
+                    <a href="#" aria-label="Notifications">
+                        <i class="fa-solid fa-bell"></i>
+                    </a>
+                </div>
+                <div id="container">
+                    <a href="#" aria-label="Groups">
+                        <i class="fa-solid fa-user-group"></i>
+                    </a>
+                </div>
+                <div id="container">
                 <a href="#" aria-label="Messages">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" id="Messages" width="30" height="30">
-                        <path fill="#fffefe"
-                            d="m447.372 413.112-17.544-52.629c-1-3.002-.674-6.23.775-9.043 13.184-25.615 18.629-55.858 12.925-87.736-8.746-48.868-44.53-89.475-90.943-105.048 11.976 28.924 15.628 61.084 9.645 92.984-12.155 64.837-64.074 116.246-129.191 127.924-8.429 1.512-16.945 2.248-25.396 2.463 19.776 21.336 46.173 36.503 75.619 41.784 31.682 5.682 61.784.393 87.322-12.594 2.802-1.425 6.007-1.742 8.99-.748l52.83 17.61c9.251 3.084 18.052-5.716 14.968-14.967z"
-                            class="color173042 svgShape"></path>
-                        <path fill="#fffefe"
-                            d="M177.161 85.744C122.283 95.941 78.306 140.526 68.472 195.47c-5.704 31.878-.259 62.121 12.925 87.736 1.449 2.813 1.775 6.041.776 9.043l-17.545 52.629c-3.083 9.251 5.717 18.051 14.968 14.968l52.83-17.61c2.984-.994 6.19-.677 8.991.748 25.537 12.987 55.638 18.276 87.321 12.594 54.809-9.829 99.281-53.698 109.541-108.428 18.078-96.414-64.733-179.316-161.118-161.406zm34.938 177.536h-68.234c-6.73 0-12.185-5.454-12.185-12.185 0-6.73 5.455-12.185 12.185-12.185h68.234c6.731 0 12.185 5.455 12.185 12.185 0 6.731-5.454 12.185-12.185 12.185zm48.739-48.739H143.864c-6.73 0-12.185-5.454-12.185-12.185 0-6.73 5.455-12.185 12.185-12.185h116.973c6.731 0 12.185 5.455 12.185 12.185.001 6.731-5.453 12.185-12.184 12.185z"
-                            class="color173042 svgShape"></path>
-                    </svg></a>
+                    <i class="fa-brands fa-rocketchat"></i></a>
+                </div>
             </div>
         </nav>
 
@@ -87,7 +50,26 @@
                     <span class="icon">&#128269;</span>
                 </div>
         </header>
+
+        <!-- Login Modal -->
+        <div id="loginModal" class="modal">
+            <div class="modal-content">
+                <span class="close" id="closeModal">&#10006;</span>
+                <h2>Login</h2>
+                <form id="loginForm">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" required>
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
+                    <button type="submit">Login</button>
+                </form>
+            </div>
+        </div>
+
+        <!--                  -->
+
     </div>
     <script src="navbar.js"></script>
 </body>
+
 </html>
