--- a/Model/navbar.html
+++ b/Model/navbar.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="navbar.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 
@@ -20,21 +21,26 @@
                 <div id="container">
                     <a href="#" aria-label="Profie" id="profileBtn">
                         <i class="fa-solid fa-user"></i>
+                        <span class="tooltip">Profile</span>
                     </a>
                 </div>
                 <div id="container">
                     <a href="#" aria-label="Notifications">
                         <i class="fa-solid fa-bell"></i>
+                        <span class="tooltip">Notifications</span>
                     </a>
                 </div>
                 <div id="container">
                     <a href="#" aria-label="Groups">
                         <i class="fa-solid fa-user-group"></i>
+                        <span class="tooltip">Community</span>
                     </a>
                 </div>
                 <div id="container">
                 <a href="#" aria-label="Messages">
-                    <i class="fa-brands fa-rocketchat"></i></a>
+                    <i class="fa-brands fa-rocketchat"></i>
+                    <span class="tooltip">Chats</span>
+                </a>
                 </div>
             </div>
         </nav>
@@ -51,20 +57,31 @@
                 </div>
         </header>
 
-        <!-- Login Modal -->
-        <div id="loginModal" class="modal">
-            <div class="modal-content">
-                <span class="close" id="closeModal">&#10006;</span>
-                <h2>Login</h2>
-                <form id="loginForm">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required>
-                    <button type="submit">Login</button>
-                </form>
-            </div>
+       <!-- Login Modal -->
+<div id="loginModal" class="modal">
+    <div class="modal-content">
+        <span class="close" id="closeModal">&#10006;</span>
+        <h2>Login to GlobeTogether</h2>
+        <form id="loginForm">
+            <label for="username">Email or Phone Number</label>
+            <input type="text" id="username" name="username" placeholder="Enter your email" required>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" placeholder="Enter your password" required>
+            <a href="#" style="text-align: right; font-size: 12px; color: #007bff; text-decoration: none;">
+                Forgot your password?
+            </a>
+            <button type="submit">Login</button>
+        </form>
+        <p style="margin-top: 10px; font-size: 14px;">
+            Don't have an account? <a href="#" style="color: #007bff; font-weight: bold; text-decoration: none;">Sign Up</a>
+        </p>
+        <p style="color: #555; font-size: 12px; margin-top: 20px;">Or continue with</p>
+        <div style="display: flex; flex-direction: column; gap: 10px;">
+            <button style="background-color: #4267B2; color: white;">Sign in with Facebook</button>
+            <button style="background-color: #DB4437; color: white;">Sign in with Google</button>
         </div>
+    </div>
+</div>
 
         <!--                  -->
 
